# argussight

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  conda-environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
about/: index.html
argussight/: logger.py  main.py  streamsproxy.py
argussight/core/: config.py  spawner.py
argussight/core/video_processes/: vprocess.py
argussight/core/video_processes/savers/: stream_buffer.py  video_recorder.py  video_saver.py
argussight/core/video_processes/streamer/: flow_detection.py  optical_flow_detection.py  streamer.py
argussight/grpc/: argus_service.proto  argus_service_pb2.py  argus_service_pb2_grpc.py  server.py
devs/contributing/: index.html
devs/documentation/: index.html
devs/overview/: index.html
devs/spawner/: index.html
devs/video-layer/: index.html
devs/vprocess/: index.html
docs/: index.md  installation.md
docs/devs/: contributing.md  documentation.md  video-layer.md
faq/: index.html
installation/: index.html
license/: index.html
usage/configurations/: index.html
usage/grpc/: index.html
usage/processes/: index.html
usage/setup/: index.html
