[project]
name = "argussight"
version = "0.2.0"
description = "An addition to MXCuBEWeb enabling simultaneous video streaming and distributed computer vision tasks."
authors = [{name = "Yan Walesch", email = "yan.walesch@esrf.fr"}]
license = "MIT"
readme = "README.md"
urls.repository = "https://github.com/mxcube/argussight"
urls.homepage = "https://github.com/mxcube/argussight"
urls.documentation = "https://mxcube.github.io/argussight/"
keywords = ["MXCuBEWeb", "video streaming", "computer vision", "multistream", "process management"]
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
numpy = "^1.26.0"
opencv-python = "4.10.0.84"
pillow = "<=10.4.0, >=9.4.0"
pydantic = ">=2.8.2,<2.9.0"
redis = "4.6.0"
pyyaml = "^6.0.1"
grpcio = "1.70.0"
grpcio-tools = "1.70.0"
python-levenshtein = "^0.25.1"
Flask = "^3.1.1"
requests = "^2.32.4"
websocket-client = "^1.8.0"
mxcube-video-streamer = ">=1.8.2"
colorlog = "^6.9.0"

[tool.poetry.scripts]
argussight = "argussight.main:run"
stream-layer = "argussight.streamsproxy:run"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
mkdocs = "^1.6.1"
mkdocs-macros-plugin = "^1.3.7"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
