[project]
name = "argussight"
version = "0.3.1"
description = "An addition to MXCuBEWeb enabling simultaneous video streaming and distributed computer vision tasks."
authors = [{name = "Yan Walesch", email = "yan.walesch@esrf.fr"}]
license = "MIT"
readme = "README.md"
urls.repository = "https://github.com/mxcube/argussight"
urls.homepage = "https://github.com/mxcube/argussight"
urls.documentation = "https://mxcube.github.io/argussight/"
keywords = ["MXCuBEWeb", "video streaming", "computer vision", "multistream", "process management"]
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
asyncio = "^4.0.0"
colorlog = "^6.9.0"
Flask = "^3.1.3"
grpcio = "1.70.0"
grpcio-tools = "1.70.0"
mxcube-video-streamer = "^1.9.1"
numpy = "^1.26.0"
opencv-python = "4.10.0.84"
pillow = "^12.2.0"
pydantic = "^2.13"
python-levenshtein = "^0.25.1"
pyyaml = "^6.0.1"
redis = "4.6.0"
websocket-client = "^1.8.0"

[tool.poetry.scripts]
argussight = "argussight.main:run"
stream-layer = "argussight.streamsproxy:run"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mkdocs = "^1.6.1"
mkdocs-macros-plugin = "^1.3.7"
pre-commit = "^3.8.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
